--- a/src/pages/main.html
+++ b/src/pages/main.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style/main.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <title>Kevin Yepes | Portfolio</title>
 </head>
 
 <body>
-    
+
     <div class="cointeiner">
         <div class="menu">
             <a href="#personal_info">About me</a>
@@ -18,65 +19,112 @@
             <a href="#contact_id">Contact</a>
         </div>
 
-        <!-- Personal Information -->
         <div class="About_me" id="personal_info">
             <div class="picture-profile">
-                <img src="../data/me.jfif"
-                    alt="profile">
+                <h1>Kevin Yepes</h1>
+                <h2>Software Development Analyst</h2>
+                <img src="../data/me.jfif" alt="profile">
             </div>
-            <p>test me</p>
+            <p>Beyond my technical core, I am a firm believer in continuous evolution. I am always eager to dive into
+                new technologies, whether it's mastering advanced Cloud Computing architectures, exploring the latest in
+                AI-driven automation, or refining my DevOps practices to enhance CI/CD pipelines.
+
+                My approach is simple: I don't just write code; I build systems that solve real-world bottlenecks. I
+                thrive in environments that challenge my logic and require me to learn on the fly. I am currently
+                looking to expand my expertise in distributed systems and high-scale backend architectures, always
+                staying curious and ready to embrace the next big shift in the tech landscape.</p>
         </div>
-        <!-- Personal Projects  -->
+
         <div class="Projects" id="projects_id">
             <h1>My Personal Projects</h1>
-            <p>Here are some of my recent projects:</p>
+            <p>Recent missions and deployments:</p>
+            
             <div class="p1">
-                <img src="" alt="">
-                <h2>Project 1</h2>
-                <p></p>
+                <h2>Kava</h2>
+                <p>Advanced automation system integrated with Zoho Deluge to optimize enterprise workflows.</p>
                 <button>View Project</button>
             </div>
-            <div class="p2">
-                <img src="" alt="">
-                <h2>Project 1</h2>
-                <p></p>
-                <button>View Project</button>
-            </div>
-            <div class="p3">
-                <img src="" alt="">
-                <h2>Project 1</h2>
-                <p></p>
-                <button>View Project</button>
-            </div>
-            <div class="p4">
-                <img src="" alt="">
-                <h2>Project 1</h2>
-                <p></p>
-                <button>View Project</button>
-            </div>
-            <div class="p5">
-                <img src="" alt="">
-                <h2>Project 1</h2>
-                <p></p>
-                <button>View Project</button>
-            </div>
-            <div class="p6">
-                <img src="" alt="">
-                <h2>Project 6</h2>
-                <p></p>
-                <button>View Project</button>
-            </div>
-        </div>
-        <!-- Skills content -->
-        <div class="Skills" id="skills_id">
 
+            <div class="p2">
+                <h2>Bot-Flow</h2>
+                <p>Selenium-based web scraper and automator for real-time data extraction and processing.</p>
+                <button>View Project</button>
+            </div>
+
+            <div class="p3">
+                <h2>Data-Engine</h2>
+                <p>Data analysis pipeline using Pandas to reduce manual reporting time by 70%.</p>
+                <button>View Project</button>
+            </div>
+
+            <div class="p4">
+                <h2>Cloud-Dock</h2>
+                <p>Deployment of scalable microservices using Docker and Linux infrastructure management.</p>
+                <button>View Project</button>
+            </div>
+
+            <div class="p5">
+                <h2>API-Bridge</h2>
+                <p>Flask-based RESTful API designed for seamless cross-platform data synchronization.</p>
+                <button>View Project</button>
+            </div>
+
+            <div class="p6">
+                <h2>Auto-Sys 6</h2>
+                <p>Linux server orchestration and process monitoring using Python-based background workers.</p>
+                <button>View Project</button>
+            </div>
         </div>
-        <!-- Contact content -->
+
+        <div class="Skills" id="skills_id">
+            <h1>Technical Skills</h1>
+            <div class="skills-grid">
+                <div class="skill-category">
+                    <h3><i class="fa-solid fa-code"></i> Backend</h3>
+                    <ul>
+                        <li>Python (Pandas, Flask)</li>
+                        <li>Zoho Deluge</li>
+                        <li>API Integration</li>
+                    </ul>
+                </div>
+                <div class="skill-category">
+                    <h3><i class="fa-solid fa-robot"></i> Automation</h3>
+                    <ul>
+                        <li>Selenium</li>
+                        <li>Workflow Optimization</li>
+                        <li>Web Scraping</li>
+                    </ul>
+                </div>
+                <div class="skill-category">
+                    <h3><i class="fa-solid fa-gears"></i> DevOps & Infra</h3>
+                    <ul>
+                        <li>Linux Admin</li>
+                        <li>Docker</li>
+                        <li>CI/CD Pipelines</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
         <div class="Contact" id="contact_id">
+            <h1>Connect Player</h1>
+            <div class="contact-buttons">
+                <a href="mailto:keyv2412@gmail.com" class="retro-btn">
+                    <i class="fa-solid fa-envelope"></i> [GMAIL]
+                </a>
+
+                <a href="https://www.linkedin.com/in/keviinyepes/?locale=en-US" target="_blank" class="retro-btn">
+                    <i class="fa-brands fa-linkedin"></i> [LINKEDIN]
+                </a>
+
+                <a href="https://github.com/KeviinYepes" target="_blank" class="retro-btn">
+                    <i class="fa-brands fa-github"></i> [GITHUB]
+                </a>
+            </div>
         </div>
-        <!-- footer -->
+
         <div class="footer">
-            <p style="text-align: center;">Copyright © 2024 - KeviinYepes</p>
+            <p style="text-align: center;">Copyright © 2026 - KeviinYepes | All rights reserved</p>
         </div>
     </div>
 </body>
