--- a/src/pages/main.html
+++ b/src/pages/main.html
@@ -36,45 +36,68 @@
         </div>
 
         <div class="Projects" id="projects_id">
-            <h1>My Personal Projects</h1>
-            <p>Recent missions and deployments:</p>
-            
-            <div class="p1">
-                <h2>Kava</h2>
-                <p>Advanced automation system integrated with Zoho Deluge to optimize enterprise workflows.</p>
-                <button>View Project</button>
-            </div>
+    <h1>My Personal Projects</h1>
+    <p>Selected software engineering and automation projects:</p>
+    
+    <div class="p1">
+        <h2>UnadProject</h2>
+        <p>Final academic project focused on solving a real-world problem through structured analysis, system design, and full-stack implementation using JavaScript.</p>
+        <button>
+            <a href="https://github.com/KeviinYepes/unadproject" target="_blank">
+                View Project
+            </a>
+        </button>
+    </div>
 
-            <div class="p2">
-                <h2>Bot-Flow</h2>
-                <p>Selenium-based web scraper and automator for real-time data extraction and processing.</p>
-                <button>View Project</button>
-            </div>
+    <div class="p2">
+        <h2>PokeAPI - Flask Integration</h2>
+        <p>REST-based web application built with Flask consuming external APIs, managing environments, and structuring backend logic for scalable integration.</p>
+        <button>
+            <a href="https://github.com/KeviinYepes/PokeAPI-" target="_blank">
+                View Project
+            </a>
+        </button>
+    </div>
 
-            <div class="p3">
-                <h2>Data-Engine</h2>
-                <p>Data analysis pipeline using Pandas to reduce manual reporting time by 70%.</p>
-                <button>View Project</button>
-            </div>
+    <div class="p3">
+        <h2>VulnerarCaptcha-2</h2>
+        <p>Advanced Python automation project focused on web interaction, CAPTCHA handling logic, and process optimization using Selenium-based workflows.</p>
+        <button>
+            <a href="https://github.com/KeviinYepes/VulnerarCaptcha-2" target="_blank">
+                View Project
+            </a>
+        </button>
+    </div>
 
-            <div class="p4">
-                <h2>Cloud-Dock</h2>
-                <p>Deployment of scalable microservices using Docker and Linux infrastructure management.</p>
-                <button>View Project</button>
-            </div>
+    <div class="p4">
+        <h2>LifeTrackAndroid</h2>
+        <p>Android application developed in Java implementing activity lifecycle management, UI components, and local data handling.</p>
+        <button>
+            <a href="https://github.com/KeviinYepes/LifeTrackAndroid" target="_blank">
+                View Project
+            </a>
+        </button>
+    </div>
 
-            <div class="p5">
-                <h2>API-Bridge</h2>
-                <p>Flask-based RESTful API designed for seamless cross-platform data synchronization.</p>
-                <button>View Project</button>
-            </div>
-
-            <div class="p6">
-                <h2>Auto-Sys 6</h2>
-                <p>Linux server orchestration and process monitoring using Python-based background workers.</p>
-                <button>View Project</button>
-            </div>
-        </div>
+    <div class="p5">
+        <h2>Tkinter - File Renamer</h2>
+        <p>Desktop automation tool built with Python and Tkinter to batch-rename files efficiently, reducing manual workload.</p>
+        <button>
+            <a href="https://github.com/KeviinYepes/Tkinter_Renombrar_Archivos" target="_blank">
+                View Project
+            </a>
+        </button>
+    </div>
+    <div class="p6">
+        <h2>Kava - Restaurant System</h2>
+        <p>Python-based restaurant management system handling product logic, ordering workflows, and business rule implementation.</p>
+        <button>
+            <a href="https://github.com/KeviinYepes/Kava" target="_blank">
+                View Project
+            </a>
+        </button>
+    </div>
+</div>
 
         <div class="Skills" id="skills_id">
             <h1>Technical Skills</h1>
